--- a/templates/anims/groupe-musique-mariage.html.twig
+++ b/templates/anims/groupe-musique-mariage.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe de musique pour votre mariage ! (Vin d'honneur, repas, ...)
+	Groupe de musique pour votre mariage - Orchestre sur mesure
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de musique pour votre mariage ? Musiciens professionnels, découvrez nos formules.">
+	<meta name="description" content="Vous cherchez un groupe de musique pour votre mariage ? Musiciens professionnels, découvrez nos orchestres de jazz manouche avec accordéon. Devis gratuit !">
 {% endblock %}
 
 {% block body %}
@@ -33,11 +33,11 @@
             </p>
 
 			<p>
-                Nous sommes <strong>musiciens professionnels</strong> et intervenons très régulièrement dans des mariages ; forts de notre expérience, nous proposons des formules et répertoires variés. Du jazz manouche à la chanson française, du solo au quintet.. C'est à vous de composer votre orchestre sur mesure, en choisissant les éléments que vous préférez !
+                Nous sommes <strong>musiciens professionnels</strong> et intervenons très régulièrement dans des mariages ; forts de notre expérience, nous proposons des formules et répertoires variés. Du jazz manouche à la chanson française, du solo au quintet.. C'est à vous de composer votre orchestre de mariage sur mesure, en choisissant les éléments que vous préférez !
             </p>
 
 			<p>
-				N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a> pour plus d'informations.
+				N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a> pour plus d'informations ou pour un devis gratuit.
 			</p>
 
             <h2 class="section-title section-title--small">Un accordéoniste en solo pour votre mariage</h2>
@@ -75,7 +75,7 @@
             </p>
 
             <p>
-                Nous proposons des formules du duo au quintet, autour des standards du genre popularisé par Django Reinhardt (Minor Swing, All of Me, Les Yeux Noirs, ...) ; vous entendrez également quelques chansons françaises revisitées (Ménilmontant, C'est si bon, J'attendrai...).
+                Nous proposons des orchestres de mariage sur mesure : du duo au quintet. Notre répertoire est construit autour des standards jazz manouche, style musical popularisé par Django Reinhardt (Minor Swing, All of Me, Les Yeux Noirs, ...). Vous entendrez également quelques chansons françaises revisitées (Ménilmontant, C'est si bon, J'attendrai...), que les invités de votre mariage pourront reprendre en choeur.
             </p>
 
             <div class="row">
