--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -137,7 +137,11 @@
 			</p>
 
 			<p>
-				Nous intervenons également très régulièrement lors de <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariages</a>, au vin d'honneur par exemple.
+				L'accordéon est bien évidemment présent dans toutes les formules, apportant une touche d'originalité à nos groupe ; ce n'est pas tous les jours que l'on voit un <a href="{{ path('accordeon_jazz_manouche') }}">accordéoniste jazz manouche</a> !
+			</p>
+
+			<p>
+				Nous intervenons également très régulièrement en tant qu'<a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">orchestre de mariage</a>, au vin d'honneur par exemple.
 			</p>
 
 			<div class="row">
