--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -50,7 +50,7 @@
             </p>
 
             <p>
-                Discret, l'accordéon jazz apportera à votre soirée une touche de classe et d'élégance, tout en surprenant vos invités ! Cette formule est particulièrement adaptée pour le vin d'honneur de votre mariage, ou pour le cocktail de votre entreprise...
+                Discret, l'accordéon jazz apportera à votre soirée une touche de classe et d'élégance, tout en surprenant vos invités ! Cette formule est particulièrement adaptée pour le vin d'honneur de votre mariage, ou pour le cocktail de votre entreprise... Loin des clichés de l'instrument, un <strong>accordéoniste jazz</strong> plaira à toutes les générations !
             </p>
 
             <div class="row justify-content-center" style="margin-bottom: 20px;">
@@ -164,7 +164,7 @@
             </p>
 
             <p>
-                Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à <a href="{{ path('contact') }}">me contacter</a> ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <strong>groupe de musique</strong>).
+                Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à <a href="{{ path('contact') }}">me contacter</a> ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
             </p>
         </div>
     </section>
