--- a/templates/pages/soirees_paris.html.twig
+++ b/templates/pages/soirees_paris.html.twig
@@ -64,6 +64,10 @@
                             </li>
                         </ul>
                     </p>
+
+                    <p>
+                        Oubliez le cliché "ringard", Jérémy est un <strong>accordéoniste jazz</strong> qui plaira à toutes les générations !
+                    </p>
                 </div>
 
                 <div class="col-md-4">
@@ -86,10 +90,14 @@
                 </div>
             </div>
 
+            <p style="margin-top: 15px;">
+                <a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}">Accordéoniste à Paris pour vos soirées</a>
+            </p>
+
             <h2 class="section-title section-title--small" style="margin-top: 25px;">Accompagné par d'autres musiciens</h2>
 
             <p>
-                Vous cherchez des musiciens pour animer votre soirée à Paris ? Nous vous proposons des formules clefs en main pour l'animation musicale de votre événement, en fonction de vos envies ou de votre budget ; l'accordéon est rejoint par d'autres instruments, comme par exemple la guitare ou la contrebasse, pour vous proposer des formules plus complètes et des styles spécifiques, comme par exemple le <strong>jazz manouche</strong>.<br>
+                Vous cherchez des musiciens pour animer votre soirée à Paris ? Nous vous proposons des formules clefs en main pour l'animation musicale de votre événement, en fonction de vos envies ou de votre budget ; l'accordéon est rejoint par d'autres instruments, comme par exemple la guitare ou la contrebasse, pour vous proposer des formules plus complètes et des styles spécifiques, comme par exemple le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>.<br>
                 Du duo (accordéon / guitare, accordéon / chant, ...) au quintet (accordéon / guitare / contrebasse / batterie / trompette), tout est envisageable.. N'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> afin d'en discuter !
             </p>
 
@@ -116,7 +124,7 @@
             <hr>
 
             <p>
-                Jérémy est également disponible pour des animations musicales dans toute la France ; pour plus d'informations, veuillez consulter <a href="{{ path('animations')}}">cette page</a>.
+                Jérémy est également disponible pour des animations musicales dans toute la France ; pour plus d'informations, veuillez consulter cette page : <a href="{{ path('animations')}}">animations musicales pour vos soirées</a>.
             </p>
         </div>
     </section>
