--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -310,7 +310,7 @@
 						Dans votre appartement / maison, ou en extérieur, pour n'importe quelle occasion.. Invitez vos amis et profitez d'un concert dans un cadre familial unique ; les formules en duo <strong>accordéon / voix</strong> autour de la chanson française sont particulièrement appréciées dans ce contexte.
 					</p>
 
-					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
+					<a href="{{ path('accordeoniste_soiree') }}" class="btn btn-primary">En savoir plus</a>
 				</div>
 			</div>
 
