--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon pour seniors - Ile de France
+	Animation musicale seniors - Accordéoniste - Ile de France
 {% endblock %}
 
 {% block metadesc %}
@@ -34,7 +34,17 @@
 				N'hésitez pas à <a href="{{ path('contact') }}" class="text-link">me contacter</a> pour en discuter !
 			</p>
 
-			<!--<h2 class="section-title section-title--small">Quelque extraits</h2>-->
+			<h2 class="section-title section-title--small">L'importance de l'animation en résidence pour seniors</h2>
+
+			<p>
+				Dans les maisons de retraite ou EHPAD, les moments de vie conviviaux sont indispensables à l'épanouissement des résidents. Nos aînés apprécient généralement beaucoup l'accordéon, et sont heureux d'entendre à nouveau les airs musicaux de leur jeunesse. Loin des clichés, je leur fais également découvrir un répertoire original à l'accordéon, notamment avec des standards jazz et <strong>jazz manouche</strong>.
+			</p>
+
+			<p>
+				Parce qu'on parle bien ici <strong>d'animation musicale</strong>, et non pas simplement de "concert", l'échange est primordial. Je ne fonctionne pas avec un spectacle et un répertoire figés, mais discute entre les morceaux avec vos résidents. Nous parlons bien sûr de l'histoire des chansons, mais j'oriente également le contenu en fonction de leurs retours.
+			</p>
+
+			<h2 class="section-title section-title--small">Quelque extraits</h2>
 
 			<div class="row">
                 <div class="col-md-6">
