--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -76,7 +76,7 @@
 						</p>
 
 						<p class="txt--blank">
-							Je suis <a href="{{ path('soirees_paris') }}">accordéoniste à Paris</a> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
+							Je suis <a href="{{ path('soirees_paris') }}">accordéoniste à Paris</a> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo pour votre soirée</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
  						</p>
 
 						<p>
