--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -22,7 +22,7 @@
 			<h1 class="section-title">Groupe jazz manouche pour votre mariage</h1>
 
             <p>
-                Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong>groupe de jazz manouche</strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
+                Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong><a href="{{ path('manouche') }}">groupe de jazz manouche</a></strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
 			</p>
 
             <p>
@@ -81,20 +81,26 @@
             <h2 class="section-title section-title--small">Trio jazz manouche pour votre mariage</h2>
 
 			<p>
-                Frédéric Debraine rejoint notre duo avec sa contrebasse, assurant une assise rythmique essentielle au style ; l'instrument apporte également une touche visuelle non négligeable, ambiance assurée ! Le son se fait plus <i>complet</i> grâce à l'apport des basses, la rythmique plus pêchue ; une formation réduite qui n'a rien à envier aux grands orchestres !
-            </p>
+				Le trio jazz manouche est l'une des formules phares pour l'animation musicale de votre mariage. Elle cumule tous les avantages, à savoir la facilité de mise en place ainsi que la richesse musicale. Optez soit pour une contrebasse, soit pour une seconde guitare. Dans les deux cas, la rythmique s'en trouve renforcée et l'énergie décuplée !
+			</p>
 
-            <div class="row">
-                <div class="col-md-12">
+			<p>
+				Nous intervenons essentiellement dans le cadre de vins d'honneur avec notre <strong>trio jazz manouche</strong>, mais le style peut également s'adapter pour le début de soirée !
+			</p>
+
+			<div class="row">
+				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
+				</div>
 
-                    <p class="text-center" style="margin-top: 15px;">
-                        Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, All the Things you Are, Fly me to the Moon
-                    </p>
-                </div>
-            </div>
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
 
             <h2 class="section-title section-title--small" style="margin-top: 15px;">Quartet et plus</h2>
 
