--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -113,6 +113,20 @@
                 </div>
             </div>
 
+			<h3 class="section-title section-title--smaller">Trio jazz manouche (accordéon / 2 guitares)</h3>
+
+			<p>
+				La guitare est l'instrument emblématique de la musique de Django Reinhardt, tout comme <strong>la pompe</strong>, rythmique essentielle du style jazz manouche. Avec deux guitaristes, les rôles sont répartis : l'un s'occupe de la rythmique, et l'autre des solos. Ainsi, la pompe est toujours présente et l'énergie décuplée !
+			</p>
+
+			<div class="row">
+				<div class="col-md-12">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
             <h3 class="section-title section-title--smaller" style="margin-top: 15px;">Quartet et plus</h3>
 
 			<p>
