--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -31,12 +31,10 @@
 				En duo avec l'excellent guitariste Solal Poux, nous proposons des concerts et animations musicales autour du jazz (plus particulièrement jazz manouche) ; la formule duo est facile à mettre en place, et convient très bien aux budgets les plus modestes.
 			</p>
 
-			<p>
-				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations <span class="d-none d-md-inline">sur le duo accordéon / guitare</span></a>
-			</p>
+
 
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-4">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
@@ -46,7 +44,57 @@
 						<br><a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
 					</p>
 				</div>
+
+				<div class="col-md-4">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<i>Sunny Side of the Street</i> est aujourd'hui l'un des grands standards du répertoire jazz ; le morceau a initialement été composé pour le spectacle <i>International Revue</i>, musique de Jimmy McHugh avec des paroles de Dorothy Fields
+						<br><a href="https://youtu.be/Iklby0R-WyQ" target="_blank">https://youtu.be/Iklby0R-WyQ</a>
+					</p>
+				</div>
+
+				<div class="col-md-4">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9b6zyj1e2cE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+
+					<p class="text-center" style="margin-top: 15px;">
+						<i>Indifférence</i>, un grand classique de la valse swing ! Composé par Tony Murena et Joseph Colombo
+						<br><a href="https://www.youtube.com/watch?v=9b6zyj1e2cE" target="_blank">https://www.youtube.com/watch?v=9b6zyj1e2cE</a>
+					</p>
+				</div>
 			</div>
+
+			<p>
+				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations <span class="d-none d-md-inline">sur le duo accordéon / guitare</span></a>
+			</p>
+
+			<h2 class="section-title section-title--small">Le groupe jazz manouche</h2>
+
+			<p>
+				Avec notre groupe de jazz manouche, nous proposons également des formules en trio (accordéon / guitare / contrebasse ou accordéon / 2 guitares) et quartet (accordéon / 2 guitares / contrebasse). Voici ci-dessous quelques extraits.
+			</p>
+
+			<div class="row">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<p style="margin-top: 15px;">
+				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations <span class="d-none d-md-inline">sur le groupe jazz manouche</span></a>
+			</p>
 
 			<h2 class="section-title section-title--small">Solo</h2>
 
@@ -54,9 +102,7 @@
 				Mon répertoire solo s'axe autour du jazz et de la chanson française, autour de standards et d'autres morceaux moins connus ; une formule très adaptable, disponible en acoustique ou sonorisé, possibilité de déambulations, ...
 			</p>
 
-			<p>
-				<a class="btn btn-primary" href="{{ path('animations') }}">Plus d'informations <span class="d-none d-md-inline">sur la formule en solo</span></a>
-			</p>
+
 
             <div class="row">
                 <div class="col-md-6">
@@ -106,6 +152,10 @@
 				</div>
             </div>
 
+			<p>
+				<a class="btn btn-primary" href="{{ path('animations') }}">Plus d'informations <span class="d-none d-md-inline">sur la formule en solo</span></a>
+			</p>
+
 			<h2 class="section-title section-title--small">Duos accordéon / voix</h2>
 
 			<p>
@@ -113,6 +163,20 @@
 			</p>
 
 			<div class="row">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/k9SY8saaY3I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/o91BGe2Xaac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<div class="row" style="margin-top: 15px;">
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
