--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/anims_pic.jpg" alt="" class="flash-item__background flash-item__background--groupes">
+			<img src="img/accordeoniste-soirees-evenements.jpg" alt="Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)" class="flash-item__background flash-item__background--groupes" style="top: -30%">
 		</div>
 	</section>
 
@@ -28,8 +28,13 @@
 			<p>
 				Nos formules étant destinées à tout type de public, ces groupes de musiciens s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em>. Grâce aux qualités acoustique de l'accordéon (et des autres instruments pour les orchestres), les conditions techniques sont souvent réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire.
 			</p>
+
 			<p>
 				Pour de plus grands espaces, pas d'inquiétude : Jérémy Dutheil (et ses musiciens) sont complètement <strong>autonomes</strong> et installeront un système de diffusion adapté à votre lieu. Professionnels avertis, ils gèrent l'organisation de l'<strong>animation musicale de votre soirée</strong> de A à Z.
+			</p>
+
+			<p>
+				Vous trouverez sur cette page différents types de prestations, à titre d'exemple ; n'hésitez pas à nous contacter pour toute demande particulière.
 			</p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 25px;">Accordéon solo pour une ambiance discrète</h2>
@@ -165,7 +170,7 @@
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">Formules avec chanteuse</h2>
 
 			<p>
-				Pour un événement plus participatif, ou simplement parce que vous aimez le chant, je vous conseille les formules avec chanteuse ; essentiellement basées sur la chanson française (Piaf, Montand, Barbara, Trenet, ...), nous pouvons aussi proposer des reprises anglosaxones et des répertoires <i>jazz</i>. Nos formations commencent au duo accordéon / voix en toute intimité, mais peuvent suivant vos envies également inclure d'autres musiciens (guitare, basse, batterie, piano, violon, ...). N'hésitez pas à <a href="{{ path('contact') }}"  rel="nofollow">nous contacter</a> pour nous exposer votre projet.
+				Pour un événement plus participatif, ou simplement parce que vous aimez le chant, je vous conseille les formules avec chanteuse ; essentiellement basées sur la chanson française (Piaf, Montand, Barbara, Trenet, ...), nous pouvons aussi proposer des reprises anglosaxones et des répertoires <i>jazz</i>. Nos formations commencent au duo accordéon / voix en toute intimité, mais peuvent suivant vos envies également inclure d'autres musiciens (guitare, basse, batterie, piano, violon, ...). N'hésitez pas à nous contacter pour nous exposer votre projet.
 			</p>
 
 			<h3 class="section-title section-title--smaller">Marjolaine Piémont</h3>
@@ -177,7 +182,7 @@
 			</p>
 
 			<p>
-				Très habituée à l'événementiel où elle a fait ses débuts (Pierre Cardin, Maxim's, ...), Marjolaine propose un vaste répertoire de <strong>chanson française</strong> et de <strong>jazz</strong>, dédié à vos soirées et événements. Nous sommes disponibles en duo accordéon / voix, ou avec d'autres instrumentistes sur demande ; n'hésitez pas à <a href="{{ path('contact') }}" rel="nofollow">nous contacter</a> pour en savoir plus.
+				Très habituée à l'événementiel où elle a fait ses débuts (Pierre Cardin, Maxim's, ...), Marjolaine propose un vaste répertoire de <strong>chanson française</strong> et de <strong>jazz</strong>, dédié à vos soirées et événements. Nous sommes disponibles en duo accordéon / voix, ou avec d'autres instrumentistes sur demande ; n'hésitez pas à nous contacter pour en savoir plus.
 			</p>
 
 			<div class="row" style="margin-bottom: 20px;">
@@ -242,10 +247,14 @@
 				</div>
 			</div>
 
+			<p>
+				<a href="{{ path('marie') }}" class="btn btn-primary">Plus d'informations</a>
+			</p>
+
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">Votre événement sur mesure</h2>
 
 			<p>
-				Toutes ces formules vous sont proposées à titre d'exemple ; pour votre événement, vous choisissez tout ! Le style musical, l'orientation du répertoire, les instruments présents (l'accordéon restant une constante ;) ), ... N'hésitez pas à <a href="{{ path('contact') }}" rel="nofollow">me contacter</a> afin de discuter de votre soirée !
+				Toutes ces formules vous sont proposées à titre d'exemple ; pour votre événement, vous choisissez tout ! Le style musical, l'orientation du répertoire, les instruments présents (l'accordéon restant une constante ;) ), ... N'hésitez pas à me contacter afin de discuter de votre soirée !
 			</p>
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
