--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -169,7 +169,7 @@
             <div class="container">
                 <p class="contact-txt" itemscope itemtype="http://schema.org/Person">
                     Pour tout renseignement :<br>
-                    <span itemprop="name">Jérémy Dutheil</span> - Accordéoniste à Paris <br> <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
+                    <span itemprop="name">Jérémy Dutheil</span> - <a style="color: #FFFFFF;" href="/">Accordéoniste à Paris</a> <br> <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
                 </p>
 
                 <p class="contact-txt" style="margin-top: 10px;">
@@ -182,9 +182,9 @@
 
                 <p class="text-center" style="font-size: 14px; ">
                     <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}" rel="nofollow">Mentions légales</a> - <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}" style="color: #ffffff;">Groupe de jazz manouche pour votre mariage</a> - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('animations') }}" style="color: #ffffff;">Toutes les animations musicales</a><br>
-                    - <br>
+                    <!--- <br>
                     Jérémy fait confiance à <a href="http://www.monsieuraccordeon.com" style="color: #ffffff;" target="_blank" title="Réparation / Accordage accordéons en Ile de France">Monsieur Accordéon</a> pour l'entretien de ses accordéons.
-                </p>
+                --></p>
             </div>
         </section>
 
