--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour vos événements (mariage, soirée, cocktail)
+	Groupe jazz manouche pour vos événements | Mariage, Soirée, Cocktail
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre événement (mariage, soirée privée, cocktail d'entreprise) ? Musiciens professionnels, découvrez nos formules.">
+	<meta name="description" content="Vous cherchez un groupe de jazz manouche professionnel pour votre événement (mariage, soirée privée, cocktail d'entreprise) ? Découvrez nos formules !">
 {% endblock %}
 
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/triomanouche.jpg" alt="" class="flash-item__background" style="top: -50%;">
+			<img src="img/trio-jazz-manouche.jpg" alt="Trio jazz manouche pour événements - Accordéon, Guitare, Contrebasse" class="flash-item__background" style="top: -50%;">
 		</div>
 	</section>
 
@@ -25,11 +25,15 @@
 			</h1>
 
             <p>
-                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites pour la <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (sur mesure) pour une animation musicale de qualité lors de votre événement.
+                Vous recherchez un <strong>groupe de jazz manouche</strong> pour <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">votre mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules, toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
 			</p>
 
 			<p>
-				Pour tout renseignement, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a>.
+				Vous trouverez ci-dessous des informations sur nos prestations en tant que groupe de jazz manouche. Pour tout renseignement complémentaire, ou pour établir un devis, n'hésitez pas à nous contacter (coordonnées en bas de page, ou formulaire sur page contact).
+			</p>
+
+			<p>
+				Enfin, les premiers paragraphes que vous pouvez lire sur cette page sont des informations d'ordre général sur votre événement et le style musical jazz manouche ; pour nous entendre / voir directement, et avoir une idée de ce que nous proposons, vous pouvez <a href="#formules">accéder directement à la rubrique en cliquant ici</a>.
 			</p>
 
 			<h2 class="section-title section-title--small">Votre événement</h2>
@@ -55,6 +59,8 @@
 			<p>
 				Vous avez forcément déjà entendu des morceaux comme <i>Minor Swing</i> ou <i>Les Yeux Noirs</i> ; intemporels, ils sont repris encore aujourd'hui dans presque tous les concerts de <strong>jazz manouche</strong>. Mais connaissez-vous des airs moins entendus, comme <i>Anniversary Song</i> ou <i>Lulu Swing</i> ? Notre répertoire balaie le style jazz manouche, des grands standards aux morceaux plus traditionnels et moins connus ; nous faisons également quelques incursions dans le jazz plus "classique", avec par exemple des reprises de Charlie Parker (<i>Billie's Bounce</i>, <i>Donna Lee</i>) ou Duke Ellington (<i>It don't mean a thing</i>, <i>Caravan</i>).
 			</p>
+
+			<span id="formules"></span>
 
 			<h2 class="section-title section-title--small">Nos groupes de jazz manouche pour vos événements</h2>
 
@@ -142,7 +148,7 @@
 			</p>
 
             <p>
-                Bien sûr ce ne sont que des exemples, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour établir une formule sur mesure pour votre événement.
+                Bien sûr ce ne sont que des exemples, n'hésitez pas à nous contacter pour établir une formule sur mesure pour votre événement.
             </p>
 
             <h2 class="section-title section-title--small">Quelques titres du répertoire</h2>
