--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 	<section class="flash">
 		<div class="flash-item">
-			<img src="img/flash-item-1.jpg" alt="Accordéoniste en concert" title="Accordéoniste professionnel à Paris" class="flash-item__background">
+			<img src="img/accordeoniste-paris.jpg" alt="Accordéoniste à Paris - En concert" title="Accordéoniste professionnel à Paris" class="flash-item__background">
 
 			<div class="flash-item__content mr-auto ml-5 col-sm-5">
 				<p class="flash-item__content-title">Musicien <br>pour vos événements</p>
