--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/triomanouche.jpg" alt="" class="flash-item__background" style="top: -50%;">
+			<img src="img/trio-jazz-manouche.jpg" alt="Groupe de jazz manouche pour mariage" class="flash-item__background" style="top: -50%;">
 		</div>
 	</section>
 
@@ -38,7 +38,7 @@
 			</p>
 
 			<p>
-				N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a> pour plus d'informations.
+				N'hésitez plus et contactez-nous pour plus d'informations.
 			</p>
 
             <h2 class="section-title section-title--small">Duo jazz manouche pour votre mariage</h2>
@@ -105,7 +105,7 @@
             <h2 class="section-title section-title--small" style="margin-top: 15px;">Quartet et plus</h2>
 
             <p>
-                Nous pouvons également venir à 4 ou plus : ajout d'une seconde guitare rythmique pour plus de punch, arrivée d'un violon pour d'autres possibilités mélodiques, une chanteuse pour les thèmes, ... Ce ne sont que des exemples, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour établir une formule sur mesure pour votre événement.
+                Nous pouvons également venir à 4 ou plus : ajout d'une seconde guitare rythmique pour plus de punch, arrivée d'un violon pour d'autres possibilités mélodiques, une chanteuse pour les thèmes, ... Ce ne sont que des exemples, n'hésitez pas à nous contacter pour établir une formule sur mesure pour votre événement.
             </p>
 
             <h2 class="section-title section-title--small">Quelques titres du répertoire</h2>
