--- a/templates/anims/accordeoniste-mariages.html.twig
+++ b/templates/anims/accordeoniste-mariages.html.twig
@@ -39,7 +39,7 @@
 			</p>
 
 			<p>
-				Ci-dessous, vous trouverez quelques exemples de formules proposées, et des informations détaillées sont disponibles sur <a href="{{ path('animations') }}">cette page</a> ; n'hésitez pas à <a href="{{ path('contact') }}">me contacter</a> pour en discuter !
+				Ci-dessous, vous trouverez quelques exemples de formules proposées, et des informations détaillées sont disponibles sur <a href="{{ path('animations') }}">cette page</a> ; n'hésitez pas à me contacter pour en discuter !
 			</p>
 
 			<h2 class="section-title section-title--small">Accordéoniste jazz pour vin d'honneur</h2>
