--- a/templates/pages/soirees_paris.html.twig
+++ b/templates/pages/soirees_paris.html.twig
@@ -98,7 +98,7 @@
 
             <p>
                 Vous cherchez des musiciens pour animer votre soirée à Paris ? Nous vous proposons des formules clefs en main pour l'animation musicale de votre événement, en fonction de vos envies ou de votre budget ; l'accordéon est rejoint par d'autres instruments, comme par exemple la guitare ou la contrebasse, pour vous proposer des formules plus complètes et des styles spécifiques, comme par exemple le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>.<br>
-                Du duo (accordéon / guitare, accordéon / chant, ...) au quintet (accordéon / guitare / contrebasse / batterie / trompette), tout est envisageable.. N'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> afin d'en discuter !
+                Du duo (accordéon / guitare, accordéon / chant, ...) au quintet (accordéon / guitare / contrebasse / batterie / trompette), tout est envisageable.. N'hésitez pas à nous contacter afin d'en discuter !
             </p>
 
             <div class="row">
