--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,7 +30,7 @@
 						<h1 class="section-title">Accordéoniste à Paris</h2>
 
 						<p>
-							Jérémy Dutheil est <a href="{{ path('accordeoniste') }}">un accordéoniste français</a> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz et jazz manouche</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
+							Jérémy Dutheil est un accordéoniste français complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz et jazz manouche</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
